--- a/src/Template/cup/navigation.twig
+++ b/src/Template/cup/navigation.twig
@@ -70,8 +70,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="/cup/catalog">
+                    <a href="/cup/catalog/category">
                         <span class="sub-item">Категории</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="/cup/catalog/product">
+                        <span class="sub-item">Товары</span>
                     </a>
                 </li>
             </ul>
