--- a/src/Template/cup/catalog/product/index.twig
+++ b/src/Template/cup/catalog/product/index.twig
@@ -16,12 +16,8 @@
             <div class="card">
                 <div class="card-header">
                     <div class="d-flex align-items-center">
-                        <h4 class="card-title">Список товаров в категории {{ category.title }} ({{ products.count() }})</h4>
-                        <a href="/cup/catalog/" class="btn btn-secondary btn-round ml-auto">
-                            <i class="fas fa-long-arrow-alt-left"></i>
-                            Назад
-                        </a>
-                        <a href="/cup/catalog/{{ category.uuid }}/product/add" class="btn btn-primary btn-round ml-1">
+                        <h4 class="card-title">Список товаров {{ category ? 'в категории ' ~ category.title : '' }} ({{ products.count() }})</h4>
+                        <a href="/cup/catalog/product/add{{ category ? '?category=' ~ category.uuid : '' }}" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
                             Добавить товар
                         </a>
@@ -34,7 +30,8 @@
                                 <tr>
                                     <th width="5%"><i class="fas fa-sort" data-toggle="tooltip" data-placement="top" title="Название категории. Можно оставить пустым, тогда значение будет сгенерировано автоматически. Допустимо использование только латинских символов и цифер без пробелов"></i></th>
                                     <th>Наименование</th>
-                                    <th>Цена (оптовая)</th>
+                                    <th width="10%">Категория</th>
+                                    <th>Цена</th>
                                     <th width="10%">{{ category.product.field_1 ?? 'Поле 1' }}</th>
                                     <th width="10%">{{ category.product.field_2 ?? 'Поле 2' }}</th>
                                     <th width="10%">{{ category.product.field_3 ?? 'Поле 3' }}</th>
@@ -46,15 +43,21 @@
                             </thead>
                             <tbody>
                                 {% for item in products %}
+                                    {% set buf = categories.firstWhere('uuid', item.category) %}
                                     <tr>
                                         <td class="text-center">{{ item.order }}</td>
                                         <td>
-                                            <a href="/catalog/{{ category.address }}/{{ item.address }}" target="_blank">
+                                            <a href="/catalog/{{ buf.address }}/{{ item.address }}" target="_blank">
                                                 {{ item.title }}
                                                 <i class="fas fa-external-link-alt"></i>
                                             </a>
                                         </td>
-                                        <td>{{ item.price|format_number({fraction_digit: 2}) }} ({{ item.priceWholesale|format_number({fraction_digit: 2}) }})</td>
+                                        <td>
+                                            <a href="/cup/catalog/product/{{ buf.uuid }}">
+                                                {{ buf.title }}
+                                            </a>
+                                        </td>
+                                        <td>{{ item.price|format_number({fraction_digit: 2}) }}</td>
                                         <td>{{ item.field1 }}</td>
                                         <td>{{ item.field2 }}</td>
                                         <td>{{ item.field3 }}</td>
@@ -68,11 +71,11 @@
                                                 </button>
                                                 <ul class="dropdown-menu" role="menu">
                                                     <li>
-                                                        <a href="/cup/catalog/{{ category.uuid }}/product/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i> Изменить</a>
+                                                        <a href="/cup/catalog/product/{{ item.uuid }}/edit" class="btn btn-link"><i class="fas fa-edit"></i> Изменить</a>
                                                     </li>
                                                     <li><div class="dropdown-divider"></div></li>
                                                     <li>
-                                                        <form action="/cup/catalog/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить публикацию?');">
+                                                        <form action="/cup/catalog/product/{{ item.uuid }}/delete" style="display: inline-block" method="post" onsubmit="return confirm('Вы действительно хотите удалить публикацию?');">
                                                             <button type="submit" class="btn btn-link text-danger">
                                                                 <i class="fas fa-trash-alt"></i> Удалить
                                                             </button>
@@ -89,9 +92,9 @@
                 </div>
                 <div class="card-footer">
                     <div class="d-flex align-items-center">
-                        <a href="/cup/catalog/{{ category.uuid }}/edit" class="btn btn-info btn-round ml-auto">
+                        <a href="/cup/catalog/category/{{ category.uuid }}/edit" class="btn btn-info btn-round ml-auto">
                             <i class="fa fa-edit"></i>
-                            Изменить
+                            Изменить категорию
                         </a>
                     </div>
                 </div>
