--- a/src/Template/cup/catalog/category/index.twig
+++ b/src/Template/cup/catalog/category/index.twig
@@ -24,7 +24,7 @@
 
                         {% if category %}
                             <a href="/cup/catalog/category/{{ category.parent }}" class="btn btn-secondary btn-round ml-1">
-                                <i class="fas fa-arrow-left"></i>
+                                <i class="fas fa-arrow-up"></i>
                             </a>
                         {% endif %}
                     </div>
