update main page

--- a/src/Template/cup/layout.twig
+++ b/src/Template/cup/layout.twig
@@ -278,6 +278,14 @@
                                                             <td width="50%">{{ stats.users }}</td>
                                                         </tr>
                                                         <tr>
+                                                            <th width="50%">Количество категорий и товаров:</th>
+                                                            <td width="50%">{{ stats.catalog.category }} | {{ stats.catalog.product }}</td>
+                                                        </tr>
+                                                        <tr>
+                                                            <th width="50%">Количество заказов:</th>
+                                                            <td width="50%">{{ stats.catalog.order }}</td>
+                                                        </tr>
+                                                        <tr>
                                                             <th width="50%">Количество файлов:</th>
                                                             <td width="50%">{{ stats.files }}</td>
                                                         </tr>
