--- a/theme/catalog.category.twig
+++ b/theme/catalog.category.twig
@@ -131,12 +131,18 @@
                     </div>#}
                 </div>
 
-                <div class="col-lg-9  order-1 order-lg-2 mb-5 mb-lg-0">
+                <div class="col-lg-9 order-1 order-lg-2 mb-5 mb-lg-0">
                     <div class="row">
                         {% for product in products %}
                             {% include 'catalog.category.product.twig' with {'categories':categories,'product':product,'files':files} only %}
                         {% endfor %}
                     </div>
+                </div>
+            </div>
+
+            <div class="row justify-content-center">
+                <div class="col-6">
+                    {% include 'pagination.twig' with {'pagination':pagination} only %}
                 </div>
             </div>
         </div>
