--- a/theme/catalog.category.product.twig
+++ b/theme/catalog.category.product.twig
@@ -2,7 +2,9 @@
     <div class="product-item">
         <div class="pi-pic">
             {#<div class="tag-sale">ON SALE</div>#}
-            <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath() }}" alt="">
+            <a href="/catalog/{{ categories.firstWhere('uuid', product.category).address }}/{{ product.address }}">
+                <img src="{{ files.firstWhere('item_uuid', product.uuid).getPublicPath() }}" alt="">
+            </a>
             <div class="pi-links">
                 <a href="#" class="add-card"><i class="flaticon-bag"></i><span>В корзину</span></a>
             </div>
