work with order raw

--- a/src/Template/cup/catalog/order/index.twig
+++ b/src/Template/cup/catalog/order/index.twig
@@ -4,7 +4,7 @@
     <div class="page-inner py-5">
         <div class="d-flex align-items-left align-items-md-center flex-column flex-md-row">
             <div>
-                <h2 class="text-white pb-2 fw-bold">Заказы</h2>
+                <h2 class="text-white pb-2 fw-bold">Каталог</h2>
             </div>
         </div>
     </div>
@@ -17,7 +17,7 @@
                 <div class="card-header">
                     <div class="d-flex align-items-center">
                         <h4 class="card-title">Список заказов ({{ orders.count() }})</h4>
-                        <a href="/cup/order/add" class="btn btn-primary btn-round ml-auto">
+                        <a href="/cup/catalog/order/add" class="btn btn-primary btn-round ml-auto">
                             <i class="fa fa-plus"></i>
                             Добавить заказ
                         </a>
