--- a/src/Template/cup/field.twig
+++ b/src/Template/cup/field.twig
@@ -49,7 +49,7 @@
     <div data-input class="row">
         {# COMMON LABEL #}
         <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
-            {{ label }}
+            {{ label|raw }}
             {% if args.required is not empty %}
                 <i class="text-danger">*</i>
             {% endif %}
