--- a/src/Template/cup/form.twig
+++ b/src/Template/cup/form.twig
@@ -41,7 +41,7 @@
         {# COMMON LABEL #}
         {% if label is not empty and type not in ['checkbox', 'radio'] %}
             <label class="placeholder">
-                <b>{{ label }}</b>
+                <b>{{ label|raw }}</b>
 
                 {% if args.required is not empty %}
                     <i class="text-danger">*</i>
